--- a/MyApp/src/components/LibraryCard.css
+++ b/MyApp/src/components/LibraryCard.css
@@ -7,7 +7,7 @@
 }
 
 .career-card {
-    background: white;
+    background: rgb(252, 250, 250);
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
